--- a/Web/mis-datos/index.html
+++ b/Web/mis-datos/index.html
@@ -108,7 +108,84 @@
         </div>
     </header>
     <!-- Header end -->
-    
+
+    <main class="content bg-light" id="contenedor">
+        <div class="container p-0">
+            <h1 class="h3 text-center p-4">MIS DATOS PERSONALES</h1>
+            <div class="row">
+                <div class="col-md-12 col-xl-10">
+                    <div class="tab-content">
+                        <div class="tab-pane fade show active" id="account" role="tabpanel">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h5 class="card-title mb-0">Información Personal</h5>
+                                </div>
+                                <div class="card-body">
+                                    <form>
+                                        <div class="row">
+                                            <div class="col-md-4 mb-3">
+                                                <div class="text-center">
+                                                    <img alt="Foto de usuario" src="../assets/img/icons/usuario-anonimo.png" class="rounded-circle img-responsive mt-2" width="128" height="128" />
+                                                    <!-- <div class="mt-2">
+                                                        <span class="btn btn-primary"><i class="fa fa-arrow-up"></i> Upload</span>
+                                                    </div> -->
+                                                    <!-- <small>Para un mejor resultado, utiliza una imagen de 128px por 128px en formato .jpg</small> -->
+                                                </div>
+                                            </div>
+                                            <div class="col-md-8">
+                                                <div class="row">
+                                                    <div class="mb-3 col-12">
+                                                        <label class="form-label" for="txtInputUsuarioDNI">Documento Nacional de Identidad (DNI)</label>
+                                                        <input type="text" class="form-control" id="txtInputUsuarioDNI" placeholder="Digite su DNI">
+                                                    </div>
+                                                    <div class="mb-3 col-6">
+                                                        <input type="text" class="form-control mb-2" id="txtInputUsuarioNombre" placeholder="Nombres Completos" disabled readonly>
+                                                    </div>
+                                                    <div class="mb-3 col-6">
+                                                        <input type="text" class="form-control mb-2" id="txtInputUsuarioApellido" placeholder="Apellidos Completos" disabled readonly>
+                                                    </div>
+                                                    <div class="mb-3 col-6">
+                                                        <label class="form-label" for="cboSelectUsuarioGenero">Seleccionar Género</label>
+                                                        <select class="form-select form-control" id="cboSelectUsuarioGenero">
+                                                            <option value="0">Género</option>
+                                                            <option value="Masculino">Masculino</option>
+                                                            <option value="Femenino">Femenino</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="mb-3 col-6">
+                                                        <label class="form-label" for="cboSelectUsuarioEstadoCivil">Seleccionar Estado Civil</label>
+                                                        <select class="form-select form-control" id="cboSelectUsuarioEstadoCivil">
+                                                            <option value="0">Estado Civil</option>
+                                                            <option value="Viudo">Viudo</option>
+                                                            <option value="Soltero">Soltero</option>
+                                                            <option value="Casado">Casado</option>
+                                                            <option value="Divorciado">Divorciado</option>
+                                                        </select>
+                                                    </div>
+                                                    <div class="mb-3 col-12">
+                                                        <label class="form-label" for="txtInputUsuarioCorreo">Correo Electrónico</label>
+                                                        <input type="text" class="form-control" id="txtInputUsuarioCorreo" placeholder="Digite su correo electrónico" disabled readonly>
+                                                    </div>
+                                                    <div class="mb-3 col-12">
+                                                        <label class="form-label" for="txtInputUsuarioDireccion">Dirección actual</label>
+                                                        <input type="text" class="form-control" id="txtInputUsuarioDireccion" placeholder="Digite su dirección actual">
+                                                    </div>
+                                                    <div class="mb-3 col-12">
+                                                        <button type="button" class="btn btn-primary col-12">Guardar Cambios</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <!-- Footer start -->
     <footer class="footer">
         <div class="footer_top">
