--- a/Web/especialidades/index.html
+++ b/Web/especialidades/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets Control | Operaciones</title>
+    <title>Pets Control | Especialidades</title>
     <meta name="author" content="Grupo 01 - Titulación Software 2021">
     <meta name="copyright" content="PET ID">
     <meta name="robots" content="noindex">
@@ -93,7 +93,7 @@
                                                     <a href="../nutricion/" rel="nofollow" target="_self">Nutrición</a>
                                                 </li>
                                                 <li>
-                                                    <a href="./." rel="nofollow" target="_self">Operaciones</a>
+                                                    <a href="./." rel="nofollow" target="_self">Especialidades</a>
                                                 </li>
                                             </ul>
                                         </li>
@@ -154,7 +154,7 @@
                             <ul class="links">
                                 <li><a href="../vacunas/" rel="nofollow" target="_self">Vacunas</a></li>
                                 <li><a href="../nutricion/" rel="nofollow" target="_self">Nutrición </a></li>
-                                <li><a href="./." rel="nofollow" target="_self">Operaciones</a></li>
+                                <li><a href="./." rel="nofollow" target="_self">Especialidades</a></li>
                             </ul>
                         </div>
                     </div>
