--- a/Web/nutricion/index.html
+++ b/Web/nutricion/index.html
@@ -89,7 +89,7 @@
                                                     <a href="./." rel="nofollow" target="_self">Nutrición</a>
                                                 </li>
                                                 <li>
-                                                    <a href="../operaciones/" rel="nofollow" target="_self">Operaciones</a>
+                                                    <a href="../especialidades/" rel="nofollow" target="_self">Especialidades</a>
                                                 </li>
                                             </ul>
                                         </li>
@@ -120,9 +120,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/perros/1.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para perro</h5>
+                    <h5 class="card-title">GANADOR PREMIUM</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para perro</p>
+                    <p class="card-text text-justify">Ganador Premium Razas pequeñas es un alimento para perro que ayuda a aumentar la producción de glóbulos blancos, y lo protegen de enfermedades cardiovasculares y de la vejez.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -131,9 +131,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/gatos/1.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para gato</h5>
+                    <h5 class="card-title">PRO PLAN</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para gato</p>
+                    <p class="card-text text-justify">Nutrición natural y holística que apoya a las necesidades básicas y especiales de bienestar de todas tus mascotas en etapa de crecimiento, para que crezcan fuertes y sanas.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -142,9 +142,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/perros/2.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para perro</h5>
+                    <h5 class="card-title">ULTIMA</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para perro</p>
+                    <p class="card-text text-justify">Ganador Premium Razas pequeñas es un alimento para perro que ayuda a aumentar la producción de glóbulos blancos, y lo protegen de enfermedades cardiovasculares y de la vejez.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -153,9 +153,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/gatos/2.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para gato</h5>
+                    <h5 class="card-title">MATISSE</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para gato</p>
+                    <p class="card-text text-justify">Alimento rico en pollo, completo y equilibrado con la correcta combinación de nutrientes para ayudar a mantener la salud y el bienestar de los perros adultos de raza pequeña.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -164,9 +164,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/perros/3.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para perro</h5>
+                    <h5 class="card-title">NUTRAM</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para perro</p>
+                    <p class="card-text text-justify">Nutrición natural para las mascotas que requieren de cuidados adicionales básicos como regular sus sensibilidades, controlar su peso y mejorar el estilo de vida en interiores.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -175,9 +175,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/gatos/3.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para gato</h5>
+                    <h5 class="card-title">RICOCAT</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para gato</p>
+                    <p class="card-text text-justify">Nutrición natural y holística que apoya en la alimentación diaria de tus mascotas para complementar su nutrición en base a grasas y calorías que son necesarias en etapa de crecimiento.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -186,9 +186,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/perros/4.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para perro</h5>
+                    <h5 class="card-title">MAGNUS</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para perro</p>
+                    <p class="card-text text-justify">Alimento rico en carne y muy completo en proteínas, siendo equilibrado con la correcta combinación de nutrientes que toda mascota necesita tener en su alimentación día a día.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -197,9 +197,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/gatos/4.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para gato</h5>
+                    <h5 class="card-title">ULTIMA</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para gato</p>
+                    <p class="card-text text-justify">Este es un alimento 100% natural, sin cereales, hipoalergénico, completo y equilibrado para cachorros y perros jóvenes de todas las razas formulado con ingredientes de alta calidad.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -208,9 +208,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/perros/5.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para perro</h5>
+                    <h5 class="card-title">ALCON</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para perro</p>
+                    <p class="card-text text-justify">Nutrición perfecta para cachorros en los primeros años de vida, complementa su alimentación desde temprana edad para que crezca y se desarrolle de manera correcta y saludable.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -219,9 +219,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/gatos/5.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para gato</h5>
+                    <h5 class="card-title">CAMBO CAT</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para gato</p>
+                    <p class="card-text text-justify">Ganador Premium Razas pequeñas es un alimento para perro que ayuda a aumentar la producción de glóbulos blancos, y lo protegen de enfermedades cardiovasculares y de la vejez.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -230,9 +230,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/perros/6.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para perro</h5>
+                    <h5 class="card-title">DOG CHOW</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para perro</p>
+                    <p class="card-text text-justify">Alimento reformulado con ingredientes de alta calidad, este producto es ideal para cachorros de todas las razas y tamaños desde los 2 meses hasta los 18 meses de edad.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -241,9 +241,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/gatos/6.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para gato</h5>
+                    <h5 class="card-title">KISS KAT</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para gato</p>
+                    <p class="card-text text-justify">Ideal para cualquier raza de gato, ya que es un alimento completo y equilibrado en nutrientes para ayudar a mantener la salud y el bienestar de los gatos adultos o en etapa de vejez.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -252,9 +252,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/perros/7.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para perro</h5>
+                    <h5 class="card-title">PRO PLAN</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para perro</p>
+                    <p class="card-text text-justify">Alimento rico en proteínas y nutrientes para ofrecer una vida saludable al engreído del hogar, sin descuidar aspectos como su alimentación, salud y el bienestar en interiores.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -263,9 +263,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/gatos/7.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para gato</h5>
+                    <h5 class="card-title">HILL’S</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para gato</p>
+                    <p class="card-text text-justify">Ganador Premium Razas pequeñas es un alimento para perro que ayuda a aumentar la producción de glóbulos blancos, y lo protegen de enfermedades cardiovasculares y de la vejez.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -274,9 +274,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/perros/8.jpg" alt="comida para perros" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para perro</h5>
+                    <h5 class="card-title">BALANKAI</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para perro</p>
+                    <p class="card-text text-justify">Alimentación para toda mascota del hogar que se encuentre en la edad adulta, formulado con ingredientes de calidad que aseguran la correcta alimentación y nutrición de la mascota.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -285,9 +285,9 @@
             <div class="card shadow text-center m-2">
                 <img src="../assets/img/comidas/gatos/8.jpg" alt="comida para gatos" class="card-img-top">
                 <div class="card-body">
-                    <h5 class="card-title">Comida para gato</h5>
+                    <h5 class="card-title">GATI</h5>
                     <hr>
-                    <p class="card-text">Descripción de la comida para gato</p>
+                    <p class="card-text text-justify">Alimento 100% natural, sin cereales, completo y equilibrado con ingredientes de alta calidad. Producto ideal para mascotas de todas las razas y tamaños desde los 2 meses de edad.</p>
                     <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Consultar precio</a>
                 </div>
             </div>
@@ -316,7 +316,7 @@
                             <ul class="links">
                                 <li><a href="../vacunas/" rel="nofollow" target="_self">Vacunas</a></li>
                                 <li><a href="./." rel="nofollow" target="_self">Nutrición </a></li>
-                                <li><a href="../operaciones/" rel="nofollow" target="_self">Operaciones</a></li>
+                                <li><a href="../especialidades/" rel="nofollow" target="_self">Especialidades</a></li>
                             </ul>
                         </div>
                     </div>
