--- a/Web/index.html
+++ b/Web/index.html
@@ -92,7 +92,7 @@
                                                     <a href="./nutricion/" rel="nofollow" target="_self">Nutrición</a>
                                                 </li>
                                                 <li>
-                                                    <a href="./operaciones/" rel="nofollow" target="_self">Operaciones</a>
+                                                    <a href="./especialidades/" rel="nofollow" target="_self">Especialidades</a>
                                                 </li>
                                             </ul>
                                         </li>
@@ -179,7 +179,7 @@
                             </div>
                         </div>
                         <div class="service_content text-center">
-                            <h3>Operaciones</h3>
+                            <h3>Especialidades</h3>
                             <p>Nuestros médicos veterinarios están capacitados para ofrecer la mejor atención médica que tus mascotas necesitan.</p>
                         </div>
                     </div>
@@ -418,7 +418,7 @@
                             <ul class="links">
                                 <li><a href="./vacunas/" rel="nofollow" target="_self">Vacunas</a></li>
                                 <li><a href="./nutricion/" rel="nofollow" target="_self">Nutrición </a></li>
-                                <li><a href="./operaciones/" rel="nofollow" target="_self">Operaciones</a></li>
+                                <li><a href="./especialidades/" rel="nofollow" target="_self">Especialidades</a></li>
                             </ul>
                         </div>
                     </div>
