--- a/Web/registrar-mascota/index.html
+++ b/Web/registrar-mascota/index.html
@@ -89,7 +89,7 @@
                                                     <a href="../nutricion/" rel="nofollow" target="_self">Nutrición</a>
                                                 </li>
                                                 <li>
-                                                    <a href="../operaciones/" rel="nofollow" target="_self">Operaciones</a>
+                                                    <a href="../especialidades/" rel="nofollow" target="_self">Especialidades</a>
                                                 </li>
                                             </ul>
                                         </li>
@@ -221,7 +221,7 @@
                             <ul class="links">
                                 <li><a href="../vacunas/" rel="nofollow" target="_self">Vacunas</a></li>
                                 <li><a href="../nutricion/" rel="nofollow" target="_self">Nutrición </a></li>
-                                <li><a href="../operaciones/" rel="nofollow" target="_self">Operaciones</a></li>
+                                <li><a href="../especialidades/" rel="nofollow" target="_self">Especialidades</a></li>
                             </ul>
                         </div>
                     </div>
