página de especialidades OK

--- a/Web/especialidades/index.html
+++ b/Web/especialidades/index.html
@@ -112,22 +112,82 @@
         </div>
     </header>
     <!-- Header end -->
-    
-    <div class="our-services section-padding30 bg-light">
-        <div class="container">
-            <div class="row">
-                <div class=" col-lg-4 col-md-6 col-sm-6">
-                    <div class="single-services text-center mb-30">
-                        <div class="services-ion">
-                            <span class="flaticon-animals"></span>
-                        </div>
-                        <div class="services-cap">
-                            <h5>
-                                <a href="https://wa.me/51944946824" rel="nofollow" target="_blank">Desparacitación</a>
-                            </h5>
-                            <p>Recibe información actualizada y de nuestros profesionales médicos, sobre la desparacitación en tus mascotas.</p>
-                        </div>
-                    </div>
+
+    <div class="row pb-4 pt-4" id="contenedorS">
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/servicios/teleconsulta.jpg" alt="servicio" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">TELECONSULTAS</h5>
+                    <hr>
+                    <p class="card-text text-justify">Te cuidamos y cuidamos a tu mascota, realizando seguimiento y consulta a través de la pantalla. La telemedicina y tecnología a la vanguardia del cuidado y salud de tus mascotas</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Realizar Consulta</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/servicios/atencion-a-domicilio.jpg" alt="servicio" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">ATENCIÓN A DOMICILIO</h5>
+                    <hr>
+                    <p class="card-text text-justify">Si tu mascota se pone mal y no tienes como salir de casa y acudir a nosotros, no te preocupes, seremos nosotros quienes iremos a tu domicilio a atender a tu mascota.</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Realizar Consulta</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/servicios/consultas-en-sede.jpg" alt="servicio" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">CONSULTAS EN SEDE</h5>
+                    <hr>
+                    <p class="card-text text-justify">Atendemos a tu mascota cuando lo necesite, ofreciendo distintos servicios como inyecciones, consultas, curaciones, antipulgas, desparacitación, entre otros servicios.</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Realizar Consulta</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/servicios/grooming-y-banio.jpg" alt="servicio" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">GROOMING Y BAÑO</h5>
+                    <hr>
+                    <p class="card-text text-justify">Ofrecemos el servicio de baño, con los siguientes cuidados: baño normal o medicado, corte, cepillado, limpieza de oídos, corte de uñas y limpieza de glándulas anales.</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Realizar Consulta</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/servicios/esterilizacion-y-cirugia.jpg" alt="servicio" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">ESTERILIZACIÓN Y CIRUGÍAS</h5>
+                    <hr>
+                    <p class="card-text text-justify">Cuidamos de tu mascota antes, durante y después de cirugía, e internamiento para aquellos que necesiten un cuidado especial. (castración, profilaxis dental, internamiento y otros).</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Realizar Consulta</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/servicios/vacunacion-y-descarte.jpg" alt="servicio" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">VACUNACIÓN Y DESCARTES</h5>
+                    <hr>
+                    <p class="card-text text-justify">No dejes a tu mascota sin su mayor protección, además te ayudaremos a mantener su calendario de vacunación al día y a llevar un registro virtual de las mismas.</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Realizar Consulta</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="card shadow text-center m-2">
+                <img src="../assets/img/servicios/desparacitacion.png" alt="servicio" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">DESPARACITACIÓN</h5>
+                    <hr>
+                    <p class="card-text text-justify">Contamos con profesionales capacitados y con más de 10 años de experiencia ayudando a cientos de mascotas, ofreciendo campañas de desparacitación gratuitas.</p>
+                    <a href="https://wa.me/51944946824" rel="nofollow" target="_blank" class="btn btn-outline-success">Realizar Consulta</a>
                 </div>
             </div>
         </div>
